* get: rename backup file back if new file cannot be retrieved.
* get: new settings xfer:backup-suffix and xfer:keep-backup.
* get/put/mget/mput/pget/get1: add -q (quiet) option.
* edit: allow creating a new file.
* new debug option -T (truncate output file).
* optimized ssl for speed and lower syscall count.
* http: add support for digest authentication.
* fixed webdav directory listing.

Version 4.6.5 - 2015-12-10

* sftp: fixed handling of out-of-order replies.
* fixed futex_wait issue in SIGCHLD handler.
* ftp: fixed ls freezing with unstable server connection.
* torrent: show more correct ETA on the status line.
* fixed gnutls priority string.
* mirror: fixed excessive stack usage on large directories.
* documented some hard to fix bugs.
* improved man page on open command and cmd:prompt setting.
* translations updated (zh_TW).

Version 4.6.4 - 2015-08-20

* mirror: new option --transfer-all.
* torrent: new setting torrent:timeout to limit time without any progress.
* torrent: fixed handling of udp tracker without explicit port number.
* torrent: improved transfer start time after metadata download.
* improved sftp put -c to use a single FSETSTAT.
* mirror --skip-noaccess now uses user name to check for permissions.
* don't rename temporary file to the target name when transfer fails.
* new cmd:prompt escapes \l and \L for local working directory.
* translations updated (pl, ru, uk).
* new configure option --disable-ipv6.
* fixed compilation with an old gcc.

Version 4.6.3 - 2015-06-17

* new mirror setting mirror:overwrite and options --overwrite/--no-overwrite.
* new mirror option --upload-older.
* new mirror option --recursion={always,never,missing,newer}.
* try to download zero sized files as they may be non-empty.
* torrent: new options --only-new, --only-incomplete.
* torrent: fixed endless loop in FD deallocation.
* fixed a memleak when parsing a directory listing with special files.
* fixed one byte buffer overflow in cls.